# bevy_fps

./: Cargo.toml  README.md  TODO.md
art/: TODO.md  my_game.blend  my_game1.blend  my_game10.blend  my_game11.blend  my_game12.blend  my_game13.blend  my_game14.blend  my_game15.blend  my_game16.blend  my_game17.blend  my_game18.blend  my_game19.blend  my_game2.blend  my_game20.blend  my_game21.blend  my_game22.blend  my_game23.blend  my_game24.blend  my_game25.blend  my_game26.blend  my_game27.blend  my_game3.blend  my_game4.blend  my_game5.blend  my_game6.blend  my_game7.blend  my_game8.blend  my_game9.blend
assets/: World.glb  registry.json
assets/blueprints/: Player.glb  ground.glb  liu.glb  mox_47.glb  noname.glb  ref.glb
assets/levels/: World.assets.ron  World.glb  World.meta.ron  World_dynamic.glb
assets/materials/: Black.glb  Dots Stroke.glb  Eyes.glb  Ground.glb  Mat.001.glb  Mat.002.glb  Mat.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.004.glb  Material.005.glb  Material.glb  Pupils.glb  Skin.glb  Skin_Light.glb  Skin_Shadow.glb
assets/models/: kusa.blend  kusa.glb  kusa1.blend  kusa1.glb  mox47.blend  mox47_1.blend  mox47_10.blend  mox47_10.glb  mox47_11.blend  mox47_12.blend  mox47_12.glb  mox47_13.blend  mox47_13.glb  mox47_14.blend  mox47_15.blend  mox47_15.glb  mox47_16.blend  mox47_2.blend  mox47_3.blend  mox47_4.blend  mox47_5.blend  mox47_6.blend  mox47_7.blend  mox47_8.blend  mox47_9.blend  penguin7.glb  player.blend  player1.blend  player2.blend  player3.blend  player4.blend  player5.blend  (+17 more)
src/: game.rs  main.rs
(+54 files in other folders)
