[package]
name = "bevy_fps"
version = "0.1.0"
authors = ["monax-owo"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = "0.27.0"
bevy_editor_pls = "0.10.0"
bevy_rapier3d = "0.27.0"
inventory = { version = "0.1.0", path = "crates/inventory" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[workspace]
resolver = "2"
members = ["crates/inventory"]

[workspace.dependencies]
bevy = { version = "0.14.2" }
